2002-06-19  Douglas Lowder <dlowder@earthlink.net>

- Fixed a problem that caused tslib_parse_vars() (src/ts_parse_vars.c) to not
  read parameters correctly from the ts.conf file.

- Made modifications to simplify and improve the performance of the dejitter filter
  (plugins/dejitter.c).

- Added the configure script and Makefile.in files, plus other files generated by
  autogen.sh, so that only "configure" needs to be run before running "make".
  If a user wishes to rerun the automake and autoconf steps, run "autogen-clean.sh"
  and then "autogen.sh".

2002-06-17  Douglas Lowder <dlowder@earthlink.net>

- I added a simple script, autogen-clean.sh, to make it easier to change configure.in
  and regenerate configure scripts and Makefiles.

- I made modifications so that npitre's new input API code is now wrapped in
  #ifdef USE_INPUT_API.  Added a new configure flag, --enable-inputapi, which
  is turned on by default, and which adds -DUSE_INPUT_API to CFLAGS in all the
  Makefiles.  --disable-inputapi will return the code to its original behavior
  of opening /dev/touchscreen/ucb1x00 and reading events directly.

- I modified plugins/linear.c so that it determines the full linear transformation
  between touchscreen and framebuffer coordinate systems.  This method not only
  rescales and offsets the coordinates correctly, but also automatically takes care
  of rotation or tilt between the coordinate systems, and automatically takes care
  of cases where X and Y are interchanged.  Therefore, the xyswap parameter is
  no longer required or used.

- I found the framebuffer code in tests/ts_calibrate.c and tests/ts_test.c to be
  broken, and fixed it so it works correctly (used ADS GraphicsClient+ and an Intel
  DBPXA250 (Lubbock) Xscale target for testing). 
  Since there was a lot of duplication, I extracted all the framebuffer specific stuff
  to new files fbutils.c and fbutils.h, so it will be easier to add more framebuffer