@@ -4,7 +4,7 @@
 # Created: 1993-05-16
 # Public domain
 
-# $Id: mkinstalldirs,v 1.1 2002/06/19 19:05:36 dlowder Exp $
+# $Id: mkinstalldirs,v 1.2 2002/07/01 23:02:57 dlowder Exp $
 
 errstatus=0
 
