@@ -6,7 +6,7 @@
  * This file is placed under the LGPL.  Please see the file
  * COPYING for more details.
  *
- * $Id: ts_load_module.c,v 1.1.1.1 2001/12/22 21:12:06 rmk Exp $
+ * $Id: ts_load_module.c,v 1.2 2002/07/01 23:02:57 dlowder Exp $
  *
  * Close a touchscreen device.
  */
@@ -25,13 +25,19 @@ int ts_load_module(struct tsdev *ts, const char *module, const char *params)
 {
 	struct tslib_module_info * (*init)(struct tsdev *, const char *);
 	struct tslib_module_info *info;
-	char *fn;
+	char fn[1024];
 	void *handle;
 	int ret;
+	char *plugin_directory=NULL;
 
-	fn = alloca(sizeof(PLUGIN_DIR) + strlen(module) + 4);
+	if( (plugin_directory = getenv("TSLIB_PLUGINDIR")) != NULL ) {
+		//fn = alloca(sizeof(plugin_directory) + strlen(module) + 4);
+		strcpy(fn,plugin_directory);
+	} else {
+		//fn = alloca(sizeof(PLUGIN_DIR) + strlen(module) + 4);
+		strcpy(fn, PLUGIN_DIR);
+	}
 
-	strcpy(fn, PLUGIN_DIR);
 	strcat(fn, "/");
 	strcat(fn, module);
 	strcat(fn, ".so");
