@@ -1,3 +1,13 @@
+2002-07-01  Douglas Lowder <dlowder@earthlink.net>
+
+- Fixes to make this code work better on targets with framebuffers that have
+  more than 8 bits per pixel (changes to tests/fbutils.c):
+  * Removed the code that attempts to change colormap
+  * Temporarily commented out the code that opens /dev/tty1 (does not work on all targets)
+
+- Fixed the test program so that the crosshair is drawn XORed with the text on the screen,
+  so the text is not corrupted when the crosshair moves over it. (tests/fbutils.c)
+
 2002-06-19  Douglas Lowder <dlowder@earthlink.net>
 
 - Fixed a problem that caused tslib_parse_vars() (src/ts_parse_vars.c) to not
